// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switch-ethereum-chain confirmation should match snapshot 1`] = `
<div>
  <div
    class="confirmation-page h-full"
  >
    <div
      class="mm-box confirmation-page__content mm-box--padding-4"
      style="overflow-y: auto;"
    >
      <h3
        class="box box--md:margin-2 box--margin-top-1 box--margin-bottom-1 box--sm:padding-4 box--lg:padding-4 box--flex-direction-row typography typography--h3 typography--weight-normal typography--style-normal typography--align-center typography--color-text-default"
      >
        Allow this site to switch the network?
      </h3>
      <h6
        class="box box--margin-top-1 box--margin-bottom-1 box--sm:padding-4 box--lg:padding-4 box--flex-direction-row typography typography--h7 typography--weight-normal typography--style-normal typography--align-center typography--color-text-alternative"
      >
        This will switch the selected network within MetaMask to a previously added network:
      </h6>
      <div
        class="mm-box mm-box--margin-top-6 mm-box--margin-right-4 mm-box--margin-left-4 mm-box--padding-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--rounded-pill mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
        data-testid="signature-origin-pill"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-favicon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          data-testid="signature-origin-pill-avatar-favicon"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-default"
            style="mask-image: url('./images/icons/global.svg');"
          />
        </div>
        <h6
          class="mm-box mm-text origin-pill-text mm-text--body-sm mm-box--margin-left-1 mm-box--color-text-alternative"
          data-testid="signature-origin-pill-text"
        >
          https://test-dapp.metamask.io
        </h6>
      </div>
      <div
        class="box box--flex-direction-row box--justify-content-center box--display-flex"
      >
        <div
          class="mm-box confirmation-network-switch mm-box--margin-top-8 mm-box--display-flex mm-box--justify-content-center mm-box--height-full"
        >
          <div
            class="mm-box confirmation-network-switch__icon mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xl mm-avatar-network mm-text--body-lg-medium mm-text--text-transform-uppercase mm-box--margin-bottom-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
            >
              T
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--display-flex mm-box--justify-content-center mm-box--color-text-default"
              data-testid="network-switch-from-network"
            >
              Test initial state
            </p>
          </div>
          <div
            class="mm-box confirmation-network-switch__center-icon mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center"
          >
            <i
              class="fa fa-angle-right fa-lg confirmation-network-switch__check"
            />
            <div
              class="confirmation-network-switch__dashed-line"
            />
          </div>
          <div
            class="mm-box confirmation-network-switch__icon mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xl mm-avatar-network mm-text--body-lg-medium mm-text--text-transform-uppercase mm-box--margin-bottom-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
            >
              T
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--display-flex mm-box--justify-content-center mm-box--color-text-default"
              data-testid="network-switch-to-network"
            >
              Test chain
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="confirmation-footer"
    >
      <div
        class="confirmation-footer__actions"
      >
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
          data-testid="confirmation-cancel-button"
        >
          Cancel
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
          data-testid="confirmation-submit-button"
        >
          Switch network
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`switch-ethereum-chain confirmation should show alert if there are pending txs 1`] = `
<div>
  <div
    class="confirmation-page h-full"
  >
    <div
      class="mm-box confirmation-page__content mm-box--padding-4"
      style="overflow-y: auto;"
    >
      <h3
        class="box box--md:margin-2 box--margin-top-1 box--margin-bottom-1 box--sm:padding-4 box--lg:padding-4 box--flex-direction-row typography typography--h3 typography--weight-normal typography--style-normal typography--align-center typography--color-text-default"
      >
        Allow this site to switch the network?
      </h3>
      <h6
        class="box box--margin-top-1 box--margin-bottom-1 box--sm:padding-4 box--lg:padding-4 box--flex-direction-row typography typography--h7 typography--weight-normal typography--style-normal typography--align-center typography--color-text-alternative"
      >
        This will switch the selected network within MetaMask to a previously added network:
      </h6>
      <div
        class="mm-box mm-box--margin-top-6 mm-box--margin-right-4 mm-box--margin-left-4 mm-box--padding-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--rounded-pill mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
        data-testid="signature-origin-pill"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-favicon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          data-testid="signature-origin-pill-avatar-favicon"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-default"
            style="mask-image: url('./images/icons/global.svg');"
          />
        </div>
        <h6
          class="mm-box mm-text origin-pill-text mm-text--body-sm mm-box--margin-left-1 mm-box--color-text-alternative"
          data-testid="signature-origin-pill-text"
        >
          https://test-dapp.metamask.io
        </h6>
      </div>
      <div
        class="box box--flex-direction-row box--justify-content-center box--display-flex"
      >
        <div
          class="mm-box confirmation-network-switch mm-box--margin-top-8 mm-box--display-flex mm-box--justify-content-center mm-box--height-full"
        >
          <div
            class="mm-box confirmation-network-switch__icon mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xl mm-avatar-network mm-text--body-lg-medium mm-text--text-transform-uppercase mm-box--margin-bottom-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
            >
              T
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--display-flex mm-box--justify-content-center mm-box--color-text-default"
              data-testid="network-switch-from-network"
            >
              Test initial state
            </p>
          </div>
          <div
            class="mm-box confirmation-network-switch__center-icon mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center"
          >
            <i
              class="fa fa-angle-right fa-lg confirmation-network-switch__check"
            />
            <div
              class="confirmation-network-switch__dashed-line"
            />
          </div>
          <div
            class="mm-box confirmation-network-switch__icon mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xl mm-avatar-network mm-text--body-lg-medium mm-text--text-transform-uppercase mm-box--margin-bottom-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
            >
              T
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--display-flex mm-box--justify-content-center mm-box--color-text-default"
              data-testid="network-switch-to-network"
            >
              Test chain
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="confirmation-footer"
    >
      <div
        class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--margin-bottom-0 mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
      >
        <span
          class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
          style="mask-image: url('./images/icons/danger.svg');"
        />
        <div
          class="mm-box mm-box--min-width-0"
        >
          <span>
            Switching networks will cancel all pending confirmations
          </span>
        </div>
        <button
          aria-label="Close"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-banner-base__close-button mm-box--margin-left-auto mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/close.svg');"
          />
        </button>
      </div>
      <div
        class="confirmation-footer__actions"
      >
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
          data-testid="confirmation-cancel-button"
        >
          Cancel
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
          data-testid="confirmation-submit-button"
        >
          Switch network
        </button>
      </div>
    </div>
  </div>
</div>
`;
